finally fixed header/navbar text alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,4 @@
 * {
-    box-sizing: border-box;
     padding: .5%;
     margin: 0%;
     color: aliceblue;
@@ -38,7 +37,7 @@ h1 {
     padding: 0;
     border: 3px solid;
     border-radius: 50%;
-    border-color: darkmagenta;
+    border-color: rgba(74, 0, 139, 0.56);
 }    
 
 /* Navbar begin */
@@ -83,6 +82,7 @@ h2 {
 }
 
 section {
+    box-sizing: border-box;
     border-left: 1px solid;
     padding-left: 3%;
     margin-bottom: 1%;
@@ -102,6 +102,7 @@ p {
     
 /* Work begin */
 .image-box {
+    box-sizing: border-box;
     background-color: darkmagenta;
 }
 
@@ -113,6 +114,7 @@ p {
 }
 
 #work2, #work3, #work4, #work5 {
+    box-sizing: border-box;
     width: 50%;
 }
 
